spelen met python.txt
Microsoft Windows [Version 10.0.19041.508]
(c) 2020 Microsoft Corporation. Alle rechten voorbehouden.

C:\Users\darie>py
Python 3.8.5 (tags/v3.8.5:580fbb0, Jul 20 2020, 15:43:08) [MSC v.1926 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> 2 + 2
4
>>>     3 * 10
  File "<stdin>", line 1
    3 * 10
    ^
IndentationError: unexpected indent
>>> 100 - 10
90
>>> 25 / 5
5.0
>>> 10 / 3
3.3333333333333335
>>> 10 //3
3
>>> print('mijn naam is daan')
mijn naam is daan
>>> naam = daan
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'daan' is not defined
>>> print (naam)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'naam' is not defined
>>> naam = 'daan'
>>> print naam
  File "<stdin>", line 1
    print naam
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(naam)?
>>> print (naam)
daan
>>> print (naam.upper())
DAAN
>>> print (naam[0:2])
da
>>> print (naam[::-1])
naad
>>> leeftijd = '15'
>>> print ('hallo ' + naam + 'ben je al ' + str(leeftijd) + ' jaar?)'
...
...  print ('hallo' + naam + 'ben je al' + str(leeftijd) + ' jaar?)'
  File "<stdin>", line 3
    print ('hallo' + naam + 'ben je al' + str(leeftijd) + ' jaar?)'
    ^
SyntaxError: invalid syntax
>>>  print ('hallo' +(naam) + 'ben je al' + str(leeftijd) + ' jaar?)'
  File "<stdin>", line 1
    print ('hallo' +(naam) + 'ben je al' + str(leeftijd) + ' jaar?)'
    ^
IndentationError: unexpected indent
>>>  print ('hallo' + naam + 'ben je al' + str(leeftijd) + ' jaar?)
  File "<stdin>", line 1
    print ('hallo' + naam + 'ben je al' + str(leeftijd) + ' jaar?)
    ^
IndentationError: unexpected indent
>>>  print ('hallo' + naam + 'ben je al' + str(leeftijd) + ' jaar?)
  File "<stdin>", line 1
    print ('hallo' + naam + 'ben je al' + str(leeftijd) + ' jaar?)
    ^
IndentationError: unexpected indent
>>> print ('hallo' + naam + 'ben je al' + str(leeftijd) + ' jaar?)
  File "<stdin>", line 1
    print ('hallo' + naam + 'ben je al' + str(leeftijd) + ' jaar?)
                                                                 ^
SyntaxError: EOL while scanning string literal
>>> print ('hallo' + naam + 'ben je al' + str(leeftijd) + ' jaar?')
hallodaanben je al15 jaar?
>>> print ('hallo' +  naam + ' ben je al ' + str(leeftijd) + ' jaar?')
hallodaan ben je al 15 jaar?
>>> print ('hallo ' + naam + ' ben je al ' + str(leeftijd) + ' jaar?')
hallo daan ben je al 15 jaar?
>>> leeftijd = leeftijd + 1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate str (not "int") to str
>>> leeftijd = 'leeftijd + 1'
>>> leeftijd-=1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for -=: 'str' and 'int'
>>> leeftijd -= 1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for -=: 'str' and 'int'
>>> leeftijd-=1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for -=: 'str' and 'int'
>>> leeftijs -= (1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'leeftijs' is not defined
>>> leeftijd -= (1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for -=: 'str' and 'int'
>>> leeftijd
'leeftijd + 1'
>>> leeftijd -=1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for -=: 'str' and 'int'
>>> leeftijd - = 1
  File "<stdin>", line 1
    leeftijd - = 1
               ^
SyntaxError: invalid syntax
>>> leeftijd -=1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for -=: 'str' and 'int'
>>> leeftijd -=1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for -=: 'str' and 'int'
>>> leeftijd = leeftijd + 1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate str (not "int") to str
>>> leeftijd = 'jij'
>>> leeftijd = 15
>>> leeftijd = leeftijd + 1
>>> leeftijd -= 1
>>> leeftijd
15
>>> if leeftijd < 18:
... hoelang_tot18jaar = 18 - leeftijd
  File "<stdin>", line 2
    hoelang_tot18jaar = 18 - leeftijd
    ^
IndentationError: expected an indented block
>>> hoelang_tot18jaar = 18 - leeftijd
>>> elif leeftijd > 18:
  File "<stdin>", line 1
    elif leeftijd > 18:
    ^
SyntaxError: invalid syntax
>>> elif leeftijd > 18:
  File "<stdin>", line 1
    elif leeftijd > 18:
    ^
SyntaxError: invalid syntax
>>> from random import randint
>>> randint(0,1000
... willekeurig_getal = rantint(0,1000)
  File "<stdin>", line 2
    willekeurig_getal = rantint(0,1000)
    ^
SyntaxError: invalid syntax
>>> willekeurig_getal = randint(0,1000)
>>> willekeurig_getal
127
>>> print('willekeurig getal tussen 0 en 1000: ' + str(willekeurig_getal))
willekeurig getal tussen 0 en 1000: 127
>>> from datetime import datetime
>>> datum = datetime.now()
>>> print (datum)
2020-09-16 13:05:07.104112
>>> datum.strtime('%A %D %B %Y')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'datetime.datetime' object has no attribute 'strtime'
>>> datum.strftime('%A %D %B %Y')
'Wednesday 09/16/20 September 2020'
>>> import locale
>>> locale.setlocale(locale.lc_TIME, 'nl_NL')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: module 'locale' has no attribute 'lc_TIME'
>>> locale.setlocale(locale.LC_TIME, 'nl_NL')
'nl_NL'
>>> datum.strftime('%A %D %B %Y')
'woensdag 09/16/20 september 2020'
>>> locale.setlocate(locale.LC_TIME, 'it_IT')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: module 'locale' has no attribute 'setlocate'
>>> locale.setlocale(locale.LC_TIME, 'it_IT')
'it_IT'
>>> datum.strftime('%A %D %B %Y')
'mercoledì 09/16/20 settembre 2020'
>>>